@@ -5,10 +5,7 @@ import com.janeirodigital.shapetrees.core.exceptions.ShapeTreeException;
 import com.janeirodigital.shapetrees.core.helpers.GraphHelper;
 import com.janeirodigital.shapetrees.core.vocabularies.RdfVocabulary;
 import com.janeirodigital.shapetrees.core.vocabularies.ShapeTreeVocabulary;
-import lombok.AllArgsConstructor;
 import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.apache.jena.graph.Graph;
 import org.apache.jena.graph.Node;
@@ -16,10 +13,13 @@ import org.apache.jena.graph.NodeFactory;
 import org.apache.jena.graph.Triple;
 import org.apache.jena.vocabulary.RDF;
 
+import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
+
+import static com.janeirodigital.shapetrees.core.helpers.GraphHelper.urlToUri;
 
 
 /**
@@ -33,41 +33,42 @@ import java.util.List;
 @Getter
 public class ShapeTreeLocator {
 
-    private URI id;
+    private URL id;
     private List<ShapeTreeLocation> locations = new ArrayList<>();   // Each ShapeTreeLocator has one or more ShapeTreeLocations
 
-    public ShapeTreeLocator(URI id) {
+    public ShapeTreeLocator(URL id) {
         this.id = id;
     }
 
-    public URI getURI() throws URISyntaxException {
+    public URL getURL() throws MalformedURLException {
         return this.id;
     }
 
-    public Graph getGraph() throws URISyntaxException {
+    public Graph getGraph() throws MalformedURLException {
 
         Graph locatorGraph = GraphHelper.getEmptyGraph();
-        String locatorSubject = this.getURI().toString();
+        String locatorSubject = this.getURL().toString();
 
         // <> a st:ShapeTreeLocator
-        locatorGraph.add(GraphHelper.newTriple(locatorSubject, RDF.type.toString(), URI.create(ShapeTreeVocabulary.SHAPETREE_LOCATOR)));
+        locatorGraph.add(GraphHelper.newTriple(locatorSubject, RDF.type.toString(), new URL(ShapeTreeVocabulary.SHAPETREE_LOCATOR)));
 
         // For each location create a blank node and populate
         for (ShapeTreeLocation location : this.locations) {
 
             // <#locator> st:contains <location1>, <location2>
-            locatorGraph.add(GraphHelper.newTriple(locatorSubject, ShapeTreeVocabulary.LOCATION, location.getUri()));
+            locatorGraph.add(GraphHelper.newTriple(locatorSubject, ShapeTreeVocabulary.LOCATION, location.getUrl()));
 
-            locatorGraph.add(GraphHelper.newTriple(location.getUri(), URI.create(ShapeTreeVocabulary.HAS_SHAPE_TREE), URI.create(location.getShapeTree())));
-            locatorGraph.add(GraphHelper.newTriple(location.getUri(), URI.create(ShapeTreeVocabulary.HAS_MANAGED_RESOURCE), URI.create(location.getManagedResource())));
-            locatorGraph.add(GraphHelper.newTriple(location.getUri(), URI.create(ShapeTreeVocabulary.HAS_ROOT_SHAPE_TREE_LOCATION), location.getRootShapeTreeLocation()));
+            final URI subject = urlToUri(location.getUrl());
+            locatorGraph.add(GraphHelper.newTriple(subject, URI.create(ShapeTreeVocabulary.HAS_SHAPE_TREE), location.getShapeTree()));
+            locatorGraph.add(GraphHelper.newTriple(subject, URI.create(ShapeTreeVocabulary.HAS_MANAGED_RESOURCE), new URL(location.getManagedResource())));
+            locatorGraph.add(GraphHelper.newTriple(subject, URI.create(ShapeTreeVocabulary.HAS_ROOT_SHAPE_TREE_LOCATION), location.getRootShapeTreeLocation()));
 
             if (location.getShape() != null) {
-                locatorGraph.add(GraphHelper.newTriple(location.getUri(), URI.create(ShapeTreeVocabulary.SHAPE), URI.create(location.getShape())));
+                locatorGraph.add(GraphHelper.newTriple(subject, URI.create(ShapeTreeVocabulary.SHAPE), new URL(location.getShape())));
             }
 
             if (location.getFocusNode() != null) {
-                locatorGraph.add(GraphHelper.newTriple(location.getUri(), URI.create(ShapeTreeVocabulary.FOCUS_NODE), URI.create(location.getFocusNode())));
+                locatorGraph.add(GraphHelper.newTriple(subject, URI.create(ShapeTreeVocabulary.FOCUS_NODE), new URL(location.getFocusNode())));
             }
 
         }
@@ -75,14 +76,14 @@ public class ShapeTreeLocator {
         return locatorGraph;
     }
 
-    public void addShapeTreeLocation(ShapeTreeLocation location) throws ShapeTreeException, URISyntaxException {
+    public void addShapeTreeLocation(ShapeTreeLocation location) throws ShapeTreeException, MalformedURLException {
 
         if (this.locations == null || location == null) {
             throw new ShapeTreeException(500, "Must provide a non-null location to an initialized List of ShapeTreeLocations");
         }
 
-        if (location.getUri() == null) {
-            location.setUri(this.mintLocation());
+        if (location.getUrl() == null) {
+            location.setUrl(this.mintLocation());
         }
 
         if (!this.locations.isEmpty()) {
@@ -97,27 +98,27 @@ public class ShapeTreeLocator {
 
     }
 
-    // Generates or "mints" a URI for a new location contained in the locator
-    public URI mintLocation() throws URISyntaxException {
+    // Generates or "mints" a URL for a new location contained in the locator
+    public URL mintLocation() throws MalformedURLException {
 
         String fragment = RandomStringUtils.random(8, true, true);
-        String locationString = this.getURI().toString() + "#" + fragment;
+        String locationString = this.getURL().toString() + "#" + fragment;
 
-        URI locationUri = URI.create(locationString);
+        URL locationUrl = new URL(locationString);
 
         for (ShapeTreeLocation location : this.locations) {
-            if (location.getUri() != null && location.getUri().equals(locationUri)) {
-                // If we somehow managed to randomly generate a location URI that already exists, generate another
+            if (location.getUrl() != null && location.getUrl().equals(locationUrl)) {
+                // If we somehow managed to randomly generate a location URL that already exists, generate another
                 return mintLocation();
             }
         }
-        return locationUri;
+        return locationUrl;
     }
 
-    public ShapeTreeLocation getContainingShapeTreeLocation() throws URISyntaxException, ShapeTreeException {
+    public ShapeTreeLocation getContainingShapeTreeLocation() throws MalformedURLException, ShapeTreeException {
 
         for (ShapeTreeLocation location : this.locations) {
-            ShapeTree shapeTree = ShapeTreeFactory.getShapeTree(URI.create(location.getShapeTree()));
+            ShapeTree shapeTree = ShapeTreeFactory.getShapeTree(location.getShapeTree());
             if (shapeTree.getContains() != null && !shapeTree.getContains().isEmpty()) {
                 return location;
             }
@@ -126,7 +127,7 @@ public class ShapeTreeLocator {
         return null;
     }
 
-    public static ShapeTreeLocator getShapeTreeLocatorFromGraph(URI id, Graph shapeTreeMetadataGraph) {
+    public static ShapeTreeLocator getShapeTreeLocatorFromGraph(URL id, Graph shapeTreeMetadataGraph) throws ShapeTreeException {
 
          ShapeTreeLocator locator = new ShapeTreeLocator(id);
 
@@ -145,20 +146,25 @@ public class ShapeTreeLocator {
             throw new IllegalStateException("No ShapeTreeLocator instances found: " + shapeTreeLocatorTriples.size());
         }
 
-        // Get the URI of the ShapeTreeLocator subject node
-        String locatorURI = shapeTreeLocatorTriples.get(0).getSubject().getURI();
+        // Get the URL of the ShapeTreeLocator subject node
+        String locatorURL = shapeTreeLocatorTriples.get(0).getSubject().getURI();
 
         // Look up ShapeTreeLocation nodes (locator subject node, st:location, any st:location nodes).
-        // There should be one result per nested ShapeTreeLocation, each identified by a unique uri.
+        // There should be one result per nested ShapeTreeLocation, each identified by a unique url.
         // Shape Trees, §3: A shape tree locator includes one or more shape tree locations via st:location
         // https://shapetrees.org/TR/specification/#locator
-        List<Triple> locationNodes = shapeTreeMetadataGraph.find(NodeFactory.createURI(locatorURI),
-                                                        NodeFactory.createURI(ShapeTreeVocabulary.LOCATION),
-                                                        Node.ANY).toList();
+        final Node s = NodeFactory.createURI(locatorURL);
+        final Node stLocation = NodeFactory.createURI(ShapeTreeVocabulary.LOCATION);
+        List<Triple> locationNodes = shapeTreeMetadataGraph.find(s, stLocation, Node.ANY).toList();
 
         // For each st:location node, extract a new ShapeTreeLocation
         for (Triple locationNode : locationNodes) {
-            ShapeTreeLocation location = ShapeTreeLocation.getShapeTreeLocationFromGraph(URI.create(locationNode.getObject().getURI()), shapeTreeMetadataGraph);
+            ShapeTreeLocation location = null;
+            try {
+                location = ShapeTreeLocation.getShapeTreeLocationFromGraph(new URL(locationNode.getObject().getURI()), shapeTreeMetadataGraph);
+            } catch (MalformedURLException e) {
+                throw new ShapeTreeException(500, "Object of { "+s+" "+ stLocation +" "+locationNode.getObject()+" } must be a URL.");
+            }
             locator.locations.add(location);
         }
 
@@ -166,12 +172,12 @@ public class ShapeTreeLocator {
 
     }
 
-    public ShapeTreeLocation getShapeTreeLocationForShapeTree(URI shapeTreeUri) {
+    public ShapeTreeLocation getShapeTreeLocationForShapeTree(URL shapeTreeUrl) {
 
         if (this.locations == null || this.locations.isEmpty()) { return null; }
 
         for (ShapeTreeLocation location : this.locations) {
-            if (location.getShapeTree().equals(shapeTreeUri.toString())) { return location; }
+            if (location.getShapeTree().equals(shapeTreeUrl)) { return location; }
         }
         return null;
     }
@@ -192,7 +198,7 @@ public class ShapeTreeLocator {
 
     }
 
-    public void removeShapeTreeLocationForShapeTree(URI shapeTreeUri) {
-        removeShapeTreeLocation(getShapeTreeLocationForShapeTree(shapeTreeUri));
+    public void removeShapeTreeLocationForShapeTree(URL shapeTreeUrl) {
+        removeShapeTreeLocation(getShapeTreeLocationForShapeTree(shapeTreeUrl));
     }
 }
